# FenrirWatch

./: .gitignore  Cargo.toml  README.md
InstallerPkg/: INSTALLER_README.md  installer.nsi
src/: main.rs
src/config/: config.ini  config.rs  config.yaml  mod.rs
src/core/: error.rs  etw.rs  mod.rs  recovery.rs
src/gui/: mod.rs
