[package]
name = "fenrirwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
wmi = "0.13"
winreg = "0.52"
winapi = { version = "0.3", features = ["winreg", "minwindef", "guiddef"] }
widestring = "1.0"
rand = "0.8"
windows = { version = "0.56", features = ["Win32_System_Diagnostics_Etw", "Win32_System_SystemServices", "Win32_Foundation", "Win32_System_EventLog", "Win32_System_SystemInformation", "Win32_System_Time"] }
eframe = "0.26"
egui = "0.26"
